--- a/front-end/package.json
+++ b/front-end/package.json
@@ -8,6 +8,8 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@web3-onboard/core": "^2.22.1",
+    "@web3-onboard/injected-wallets": "^2.11.1",
     "bootstrap": "^5.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
