--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,7 +10,9 @@
     "@testing-library/user-event": "^13.5.0",
     "@web3-onboard/core": "^2.22.1",
     "@web3-onboard/injected-wallets": "^2.11.1",
+    "@web3-onboard/react": "^2.9.1",
     "bootstrap": "^5.3.3",
+    "ethers": "^6.13.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
