--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,7 +12,9 @@
     "@web3-onboard/injected-wallets": "^2.11.1",
     "@web3-onboard/react": "^2.9.1",
     "bootstrap": "^5.3.3",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.1",
+    "express": "^4.19.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
